# fastosc

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: rust.yml
benches/: example_addrs.txt  osc_bench.rs  wildcard_stress.txt
libhi-ffi/: Cargo.toml  build.rs  cbindgen.toml
libhi-ffi/c-examples/: .gitignore  Makefile  README.md  reciever.c  reciever_with_data.c  simple_reciever.c  vararg_reciever.c
libhi-ffi/src/: capi.rs
src/: lib.rs  main.rs
