[package]
name = "libhi"
version = "0.3.1"
edition = "2024"
license = "LGPL-2.1-or-later"

[workspace]
members = [ "libhi-ffi" ]

[lib]
name = "libhi"
path = "src/lib.rs"


[[bin]]
name = "libhi-demo"
path = "src/main.rs"

[dependencies]
rosc = { git = "https://github.com/codingHahn/rosc.git", rev = "8c2e52189059e0b5687d103ddcb7d09a35e9acee" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "osc_bench"
harness = false
