[package]
name = "libhi"
version = "0.3.2"
edition = "2024"
license = "LGPL-2.1-or-later"

[workspace]
members = [ "libhi-ffi" ]

[lib]
name = "libhi"
path = "src/lib.rs"


[[bin]]
name = "libhi-demo"
path = "src/main.rs"

[dependencies]
rosc = { git = "https://github.com/codingHahn/rosc.git", rev = "229ee4733ea85df0f6e5db9098bf471fbd194630" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "osc_bench"
harness = false
