[package]
name = "libhi"
version = "0.3.2"
edition = "2024"
license = "LGPL-2.1-or-later"

[workspace]
members = [ "libhi-ffi" ]

[lib]
name = "libhi"
path = "src/lib.rs"


[[bin]]
name = "libhi-demo"
path = "src/main.rs"

[dependencies]
rosc = { git = "https://github.com/codingHahn/rosc.git", rev = "58bb0a7445adb441228f18eb302314c2172b0e20" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "osc_bench"
harness = false
